k8s/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  type: LoadBalancer
  selector:
    app: gateway
  ports:
    - port: 3000
      targetPort: 3000
