k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    # Automatically redirect all HTTP traffic to HTTPS
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    app: ingress
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - api.vidsmith.org
      secretName: tls-secret

  # Host- and path-based routing rules
  rules:
    - host: api.vidsmith.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 80
